--- a/popup.css
+++ b/popup.css
@@ -1,70 +1,38 @@
 body {
-  font-family: "Arial", sans-serif;
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  width: 150px;
   background-color: #f4f4f9;
-  width: 250px;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-h3 {
-  margin: 0;
-  padding: 10px 0;
-  font-size: 18px;
   text-align: center;
-  color: #0078d4;
-  background-color: #ffffff;
-  border-bottom: 1px solid #ddd;
-  width: 100%;
 }
 
-/* Button Styles */
-button {
-  background-color: #0078d4;
-  color: white;
-  border: none;
-  padding: 10px 15px;
+#app {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#photo-container {
+  margin-bottom: 20px;
+}
+
+#cover-photo {
+  max-width: 150px;
+  max-height: 150px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s ease-in-out;
+}
+
+#cover-photo:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+#no-photo-message {
   font-size: 14px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 10px 0;
-}
-
-button:hover {
-  background-color: #005bb5;
-}
-
-ul {
-  list-style-type: none;
-  padding: 10px;
-  margin: 0px;
-}
-
-li {
-  margin: 0;
-  display: inline-block;
-  margin-left: 5px;
-}
-
-img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  background-color: #f9f9f9;
-}
-
-img:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-/* No Photos Message */
-.no-photos {
-  font-size: 14px;
-  color: #555;
+  color: #666;
   text-align: center;
   margin-top: 20px;
 }
